--- a/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
+++ b/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,25 +23,26 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc2-vV-qzx">
-                        <rect key="frame" x="10" y="11" width="289" height="26.5"/>
+                        <rect key="frame" x="10" y="11" width="289" height="29"/>
                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
-                        <color key="textColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" name="1A1A1A"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.70999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="dJd-NX-95m">
-                        <rect key="frame" x="10" y="47.5" width="289" height="4"/>
+                        <rect key="frame" x="10" y="50" width="289" height="4"/>
                         <color key="tintColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="progressTintColor" name="5069B8"/>
                     </progressView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="akar-icons_chevron-right" translatesAutoresizingMaskIntoConstraints="NO" id="kT0-mV-FsU">
-                        <rect key="frame" x="309" y="37.5" width="24" height="24"/>
+                        <rect key="frame" x="309" y="40" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="kT0-mV-FsU" secondAttribute="height" multiplier="1:1" id="zRm-XD-dRu"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="IDR XXX.XXX / IDR X.XXX.XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2S-dm-EIX">
-                        <rect key="frame" x="10" y="61.5" width="289" height="15.5"/>
+                        <rect key="frame" x="10" y="64" width="289" height="13"/>
                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" name="BDBDBD"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -80,5 +82,14 @@
     </objects>
     <resources>
         <image name="akar-icons_chevron-right" width="24" height="24"/>
+        <namedColor name="1A1A1A">
+            <color red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="5069B8">
+            <color red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="BDBDBD">
+            <color red="0.74117647058823533" green="0.74117647058823533" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
