--- a/MyMonee-Final/Views/ImpianViewControllerNew.xib
+++ b/MyMonee-Final/Views/ImpianViewControllerNew.xib
@@ -25,7 +25,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Impian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4u-Va-znm">
-                    <rect key="frame" x="16" y="60.5" width="72.5" height="28"/>
+                    <rect key="frame" x="16" y="60.5" width="87" height="34"/>
                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                     <color key="textColor" name="4F4F4F"/>
                     <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
                     </connections>
                 </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="8" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-LT-1yD">
-                    <rect key="frame" x="16" y="119.5" width="381" height="742.5"/>
+                    <rect key="frame" x="0.0" y="125.5" width="414" height="736.5"/>
                     <color key="backgroundColor" name="AccentColor"/>
                     <color key="separatorColor" name="AccentColor"/>
                     <color key="sectionIndexBackgroundColor" name="AccentColor"/>
@@ -52,8 +52,8 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Wzb-Oq-Sq0" secondAttribute="trailing" constant="17" id="hZ2-LK-ad5"/>
                 <constraint firstItem="CJW-LT-1yD" firstAttribute="top" secondItem="H4u-Va-znm" secondAttribute="bottom" constant="31" id="iVz-UY-NVy"/>
                 <constraint firstItem="H4u-Va-znm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="m6A-7h-utl"/>
-                <constraint firstItem="CJW-LT-1yD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="p5P-2f-SBh"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CJW-LT-1yD" secondAttribute="trailing" constant="17" id="s2I-Kg-n5h"/>
+                <constraint firstItem="CJW-LT-1yD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="p5P-2f-SBh"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CJW-LT-1yD" secondAttribute="trailing" id="s2I-Kg-n5h"/>
                 <constraint firstItem="H4u-Va-znm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16.690000000000001" id="wvy-lT-krV"/>
             </constraints>
             <point key="canvasLocation" x="-54" y="85"/>
@@ -62,13 +62,13 @@
     <resources>
         <image name="Insert" width="36" height="36"/>
         <namedColor name="4F4F4F">
-            <color red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.31000000238418579" green="0.31000000238418579" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor">
             <color red="0.94099998474121094" green="0.94900000095367432" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="F0F2F8">
-            <color red="0.94117647058823528" green="0.94901960784313721" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94099998474121094" green="0.94900000095367432" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
